# messenger

client/: CMakeLists.txt  connection.ui  widget.ui
client/inc/: connection.h  widget.h
client/src/: connection.cpp  connection.ui  main.cpp  widget.cpp
server/: CMakeLists.txt
server/inc/: server.h  socket.h
server/src/: main.cpp  server.cpp  socket.cpp
